# my-site

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
public/: site.webmanifest
public/js/: highlight.min.js  preload.min.js
src/: handlers.rs  main.css  main.rs  templates.rs
src/blog/: handlers.rs  mod.rs  models.rs  schema.rs  templates.rs
templates/: base.html  index.html
templates/blog/: index.html  post_detail.html  post_list.html
templates/client error response codes/: 404.html
