[package]
name = "my-site"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.9"
listenfd = { version = "1.0.1", optional = true }
markdown = "0.3.0"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"], optional = true }

[features]
dev = ["listenfd", "tower-http"]
