[package]
name = "my-site"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.9"
diesel = { version = "2.2.4", features = ["sqlite"] }
markdown = "0.3.0"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
